# bio-claw

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py
app/agents/: advanced.py  base.py  implementations.py
app/alerts/: engine.py
app/api/: main.py
app/archetypes/: engine.py
app/backtesting/: engine.py
app/catalysts/: engine.py  schemas.py
app/clients/: base.py  providers.py
app/clinical/: intelligence.py  schemas.py
app/config/: settings.py
app/event_studies/: analytics.py
app/financing/: parser.py  risk.py  schemas.py
app/jobs/: runtime.py
app/master_data/: schemas.py  security_master.py
app/memory/: engine.py
app/openclaw/: adapter.py  api.py  registry.py  schemas.py
app/parsers/: filings.py
app/portfolio/: construction.py
app/reports/: dossier.py
app/repositories/: memory_repository.py
app/research/: orchestrator.py  schemas.py
app/scoring/: engine.py
app/similarity/: engine.py
app/storage/: database.py  models.py
app/ui/: streamlit_app.py
data/: demo_setups.json
docs/: architecture.md
examples/: sample_watchlist.txt
scripts/: run_daily_refresh.sh
tests/: test_api_routes.py  test_archetypes_and_portfolio.py  test_catalyst_canonicalization.py  test_changes_engine.py  test_cli_surface.py  test_clinical_assessment.py  test_entity_resolution.py  test_event_study.py  test_financing_parser.py  test_openclaw_adapter.py  test_openclaw_api_surface.py  test_orchestrator.py  test_parsers.py  test_scoring.py  test_similarity.py
