[project]
name = "biotech-scout"
version = "0.1.0"
description = "Institutional-grade biotech catalyst research and scoring platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pandas>=2.1",
  "numpy>=1.26",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "streamlit>=1.33",
  "rich>=13.7",
  "loguru>=0.7",
  "python-dateutil>=2.9"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
biotech-scout = "app.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
